tests/paczka1/fuzzy1/94794317.err
Error in line 2: 6MW2OT4R0 S787 41,4
Error in line 16: DCgFNXSepmS A128 82,5
Error in line 20: 4F1H0aeMubX A128 8,8
